(Format: Year/Month/Day)
Changes for 0.9.13
*05/05/05:
  * Fix #1160244, #1099704, #1094107 Mutiple keyboard layout (Mathias + thanx
    to Vadim)
    Switching to a secondary/third keyboard layout via the xkb-extensions
    leads to broken NextWindow/PrevWindow and broken fbrun/CommandDialog:
    - be aware of what xkb is doing to the event.state
    - minor cleaning
    CommandDialog.cc WorkspaceCmd.cc Keys.cc FbTk/KeyUtil.cc/hh 
    FbTk/TextBox.cc fluxbox.cc FbRun.cc
*05/05/03:
  * Fix drawing of no-title menus, plus updating of int menu items (Simon)
    IntResMenuItem.hh/cc MenuItem.hh Menu.cc Screen.cc ToggleMenu.hh
    Toolbar.cc Slit.cc
  * Code cleaning. (Henrik)
    Fluxbox::associateClient; creates tab and
    maps WinClient to label button.
    FbWinFrame.cc, Window.cc/hh
*05/05/02:
  * Added FbTk::Select2nd + more code cleaning (Henrik)
    This returns .second from operator ()(Someclass &a)
    Usefull for std::map loops.
    FbTk/Select2nd.hh, Window.cc, Screen.cc, fluxbox.cc/hh    
  * Cleaning,  (Henrik)
    Create/delete tabs with FbWinFrame::createTab/removeTab
    FbWinFrame.hh/cc, Window.cc
*05/04/30:
  * Fix #1086673 ArrangeWindows on shaded aterms causes inconsistency (Mathias)
    we now place shaded Windows above the normal windows. ArrangeWindows
    touches only windows on the current (xinerama)-head.
    src/WorkspaceCmd.cc
*05/04/29:
  * Added new IconbarModes:  (Mathias)
       NoIcons          - all but iconified windows
       WorkspaceNoIcons - all but iconified windows on the current ws
    IconbarTool.cc/hh nls/fluxbox_nls.hh C/Translation.m
  * Fixed transient bug.  (Henrik)
    #1157361 inconsistent behavior of Java dialogs.
    Transients that are created before the transient_for window
    gets copied to a transient_for waiting list and when the 
    transient_for window is created the transients are updated, 
    When raising a transient window the window gets placed last